--- a/pokemonBattleGame-backend/package.json
+++ b/pokemonBattleGame-backend/package.json
@@ -1,6 +1,5 @@
 {
     "name": "pokemon-battle-game-api",
-    "version": "1.0.0",
     "main": "app.js",
     "type": "module",
     "scripts": {
@@ -8,12 +7,12 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
-    "license": "ISC",
-    "description": "",
     "dependencies": {
+        "cors": "2.8.5",
         "body-parser": "1.20.3",
         "dotenv": "16.4.5",
         "express": "4.21.1",
+        "joi": "17.13.3",
         "mongoose": "8.8.0"
     },
     "devDependencies": {
