--- a/backend-PokemonBattleGame/package.json
+++ b/backend-PokemonBattleGame/package.json
@@ -8,11 +8,12 @@
     },
     "author": "",
     "dependencies": {
-        "cors": "2.8.5",
         "body-parser": "1.20.3",
-        "dotenv": "16.4.5",
-        "express": "4.21.1",
+        "cors": "2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
         "joi": "17.13.3",
+        "mongodb": "3.7",
         "mongoose": "8.8.0"
     },
     "devDependencies": {
