--- a/backend-PokemonBattleGame/.gitignore
+++ b/backend-PokemonBattleGame/.gitignore
@@ -1,35 +1,26 @@
 
 node_modules/
 
-
 npm-debug.log
 yarn-debug.log
 yarn-error.log
 *.log
 
-
-
-
 .DS_Store
 Thumbs.db
 
-
 dist/
 build/
-
-
 coverage/
-
-
 .vscode/
 .idea/
-
-
 *.tmp
 *.swp
-
-
 .cache/
-
-
 *.local
+
+.env
+.env.local
+.env.development
+.env.production
+.env.*.local
